# daily-workload

./: .gitignore  2026-04-03.jsonl  2026-04-03_AI_enhanced_English.jsonl  2026-04-17.jsonl  2026-04-17_AI_enhanced_English.jsonl  DEPLOYMENT.md  README.md  TEST_CHECK.md  ai_system.txt  config.yaml  enhance.py  fetch_rss.py  file-list.txt  fix_website_loading.py  generate_output.py  index.html  pyproject.toml  requirements.txt  research_directions.md  rss_sources.txt  setup.py  structure.py  test_data.jsonl  test_enhanced_data.jsonl  test_website.py  to_md.py
.github/workflows/: daily.yml
css/: styles.css
js/: app.js  data-loader.js
